# claudeg

./: .gitignore  Cargo.toml  README.md
.github/workflows/: release.yml
scripts/: install.ps1  install.sh
src/: main.rs
tests/fixtures/: anthropic_image.json  anthropic_text.json  anthropic_tool.json  codex_image.json  codex_text.json  codex_tool.json  gemini_text.json  gemini_tool.json
web/: _redirects  index.html  llms.txt  robots.txt  sitemap.xml  style.css
