[package]
name = "claudeg"
version = "0.3.0"
edition = "2024"
description = "Run Claude Code through a ChatGPT subscription or a free Gemini 3 Flash API key. A loopback proxy that translates Anthropic's Messages API to ChatGPT Codex or Google Gemini."
license = "MIT"

[dependencies]
tokio              = { version = "1", features = ["rt-multi-thread", "macros", "signal", "fs", "sync", "time"] }
axum               = { version = "0.8", features = ["macros"] }
reqwest            = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "stream"] }
eventsource-stream = "0.2"
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"
toml               = "0.8"
clap               = { version = "4", features = ["derive"] }
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow             = "1"
thiserror          = "2"
directories        = "5"
futures            = "0.3"
uuid               = { version = "1", features = ["v4"] }
url                = "2"
base64             = "0.22"
sha2               = "0.10"
rand               = "0.8"
rpassword          = "7"

[dev-dependencies]
wiremock           = "0.6"
axum-test          = "20"
tempfile           = "3"
pretty_assertions  = "1"

[profile.release]
lto           = "thin"
codegen-units = 1
strip         = true
opt-level     = 3
panic         = "abort"
